revamped and fixed products, companies and markets